go-chain/ops/phase2/k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: tender-node
spec:
  clusterIP: None
  selector:
    app: tender-node
  ports:
  - port: 3030
    targetPort: 3030
    name: p2p
---
apiVersion: v1
kind: Service
metadata:
  name: tender-rpc
spec:
  selector:
    app: tender-rpc
  ports:
  - port: 80
    targetPort: 8080
    name: http
